# lottoedge-v1

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
app/: config.py  main.py
app/core/: __init__.py  rate_limiter.py
app/models/: database.py  schemas.py
app/routers/: about.py  analysis.py  cash5.py  dashboard.py  jackpot.py  picks.py  predictions.py  upload.py
app/services/: balance.py  cash5_predictor.py  cluster.py  composite_scorer.py  consecutive.py  coverage.py  data_loader.py  expected_value.py  frequency.py  group_dist.py  ml_engine.py  monte_carlo.py  pick_generator.py  positional.py  probability.py  skip_hit.py  sum_range.py
app/static/css/: lottoedge.css
app/static/js/: dashboard.js  picks.js
app/templates/: architecture.html  base.html  cash5.html  coverage.html  credits.html  dashboard.html  faq.html  history.html  jackpot.html  modules.html  picks.html  upload.html
app/templates/partials/: navbar.html
docs/: api_specification.md  architecture.md  database_schema.md  development_guidelines.md  requirements.md
tests/: test_cash5_predictor.py  test_data_loader.py  test_frequency.py  test_pick_generator.py  test_probability.py
